# Ocean-_Clean_vs_Ocean_Trash_Classification

./: .gitignore  main.py  pyproject.toml  rules.md
notebook/: balance_dataset.ipynb  count_images.ipynb
src/data/: balance_dataset.py
