[project]
name = "ocean-clean-vs-ocean-trash-classification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch==2.10.0+cpu",
    "torchvision==0.25.0+cpu",
    "pandas==2.3.3",
    "matplotlib==3.10.7",
    "streamlit==1.51.0",
    "fastapi==0.128.6",
    "uvicorn==0.40.0",
    "pydantic==2.12.5",
    "ruff==0.15.7",
]
